# file-storage-language

./: .gitignore  adapter.ts  dna.js  file-storage.ts  index.ts  integration.test.cjs  package-lock.json  package.json  putAdapter.ts  types.ts
.github/workflows/: test.yml
hc-dna/: Cargo.toml
hc-dna/tests/: index.ts  package.json
hc-dna/workdir/: dna.yaml  simple-dna.dna
hc-dna/zomes/file_storage/: Cargo.toml
hc-dna/zomes/file_storage/src/: lib.rs
hc-dna/zomes/integrity/: Cargo.toml
hc-dna/zomes/integrity/src/: lib.rs
hc-dna/zomes/integrity_expression/: Cargo.toml
hc-dna/zomes/integrity_expression/src/: lib.rs
hc-dna/zomes/integrity_file_storage/: Cargo.toml
hc-dna/zomes/integrity_file_storage/src/: lib.rs
