[package]
name = "integrity_file_storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "integrity_file_storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hc_zome_file_storage_integrity = "0.1.0"
